--- a/_config.yml
+++ b/_config.yml
@@ -392,8 +392,8 @@ han: false
 #valine
 valine:
   enable: true
-  leancloud_appid: jdH8y8ugrxvB5nw5eHjOQv6O-gzGzoHsz
-  leancloud_appkey: iQx4oQm8xjccnA43Jb1MhbwH
+  leancloud_appid: H3nh8VmanEFzwLTQDdJUS1KU-MdYXbMMI 
+  leancloud_appkey: TlH1DRuYhR0sPcSFhGyxzaFa 
   placeholder: "评论区供回国信息分享和交流，请不要发布广告和其它违规信息。"
   
 
@@ -545,9 +545,9 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: true
-  app_id: jdH8y8ugrxvB5nw5eHjOQv6O-gzGzoHsz
-  app_key: iQx4oQm8xjccnA43Jb1MhbwH
+  enable: false
+  app_id: H3nh8VmanEFzwLTQDdJUS1KU-MdYXbMMI 
+  app_key: TlH1DRuYhR0sPcSFhGyxzaFa 
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
