--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ menu:
   home: /
   flights-list: /航班列表
   #global-airlines-info: /航司信息
-  global-transfer-info: /转机信息
+  global-transfer-info: /转机情况
   experience-share: /回国经历分享
   quarantine-hotels-share: /隔离酒店分享
   wechat-group-chats: /微信群聊
